k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namelist
  labels:
    app: namelist
    environment: production
